Added styling and content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Penny Enterline | Game Designer</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -17,24 +17,103 @@
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a game design student at the University of Arizona. I love building interactive stories and meaningful player experiences.</p>
-  </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I'm a passionate game design student at the University of Arizona with a love for both visual creativity and technical problem-solving. I specialize in 2D pixel art and enjoy bringing characters and worlds to life with tools like Aseprite. On the technical side, I’m drawn to backend development in Unity, especially scripting complex systems and gameplay mechanics in 3D environments.
+  </p>
+  <p>
+    What drives me most is coming up with fresh game ideas! Whether it’s a unique gameplay loop, an inventive world, or a new take on a genre. I love working on collaborative teams, blending art, code, and design to create something truly memorable.
+  </p>
+</section>
 
   <section id="projects">
     <h2>Projects</h2>
+
+    <h3>Game Projects</h3>
     <ul>
-      <li><strong>Time Jumpers</strong> – A 2D platformer that lets players jump forward and backward in time.</li>
-      <li><strong>Pixel Defense</strong> – A tower defense game with customizable units and AI waves.</li>
+<h3>Game Projects</h3>
+    <ul>
+    <li>
+        <strong>Jungle Escape — 2D Platformer (Team Project)</strong><br />
+        <em>Role: Lead Designer & Artist</em>
+        <ul>
+        <li>Created the core game concept and overall level design.</li>
+        <li>Produced original 2D art using Aseprite and contributed to animation.</li>
+        <li>Collaborated on puzzle flow, gameplay balance, and visual style.</li>
+        </ul>
+        <iframe frameborder="0" src="https://itch.io/embed/3172071?border_width=5&amp;fg_color=005f66&amp;link_color=20b9c4&amp;border_color=005f66" width="560" height="175">
+        <a href="https://pennyenterline.itch.io/jungle-escape">Jungle Escape by penny</a>
+        </iframe>
+    </li>
+    <li>
+    <strong>Until Death or Dawn — 3D Tower Defense (Team Project)</strong><br />
+    <em>Role: Gameplay Programmer</em>
+    <ul>
+        <li>Implemented placement/buying/selling and resource tracking systems.</li>
+        <li>Developed a controllable first-person shooter turret tower.</li>
+        <li>Programmed damage calculations and bullet physics using Unity engine.</li>
+    </ul>
+    <iframe frameborder="0" src="https://itch.io/embed/3171812?border_width=5&amp;fg_color=005f66&amp;link_color=20b9c4&amp;border_color=005f66" width="560" height="175">
+        <a href="https://shaggyschmacky.itch.io/until-death-or-dawn">Until Death Or Dawn by ShaggySchmacky</a>
+    </iframe>
+    </li>
+
+    </ul>
+
+    <h3>Coding Projects</h3>
+    <ul>
+      <li>
+        <strong>REST API Backend</strong><br />
+        <em>Role: Developer</em>
+        <ul>
+          <li>Designed and implemented RESTful API using Python and PostgreSQL.</li>
+          <li>Handled database queries and user authentication with secure CGI scripts.</li>
+          <li>Deployed API on cloud hosting with continuous integration.</li>
+        </ul>
+      </li>
+      <li>
+  <strong>Multigame Website</strong><br />
+  <em>Role: CSS Stylist, Game Developer, DB Assistant</em>
+  <ul>
+    <li>Collaboratively built a hosted website featuring multiple browser-based games like Wordle.</li>
+    <li>Designed and styled the entire frontend using custom CSS for a clean, modern user experience.</li>
+    <li>Contributed to game logic implementation and assisted in setting up user login and leaderboard systems using a shared database.</li>
+    
+  </ul>
+  <a href="https://github.com/pennyenterline/multigamewebsite" target="_blank">View GitHub Repository</a></li>
+</li>
+
+    </ul>
+
+    <h3>Marketing Projects</h3>
+    <ul>
+      <li>
+        <strong>7:77 — 3D Roguelike Game & Monetization Strategy</strong><br />
+        <em>Role: Lead Designer & Monetization Strategist</em>
+        <p>
+          A PC roguelike inspired by Risk of Rain 2 and Hades with seven stages and bosses themed on the seven deadly sins.
+          Includes a comprehensive business plan targeting ethical monetization with Kickstarter funding, DLC, merchandise, and community building.
+        </p>
+        <p><a href="pdf/Final Monetization Project.pdf" target="_blank">Download Full Monetization Project (PDF)</a></p>
+      </li>
+        <li>
+        <strong>Cube Up! - 2D Mobile Game Practice Press Kit</strong><br />
+        <em>Role: Creator</em>
+        <p>
+          Cube Up combines the relaxing fun of Candy Crush with the puzzling nature of Tetris.
+          Complete levels of varying toughness with different objectives in this cute and colorful world of cubes!
+        </p>
+        <p><a href="pdf/Practice Press Kit.pdf" target="_blank">Download Full Practice Press Kit(PDF)</a></p>
+      </li>
     </ul>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: pj.enterline@gmail.com</p>
+    <p>Email: <a href="mailto:pj.enterline@gmail.com">pj.enterline@gmail.com</a></p>
     <p>Phone: (480)-261-2380</p>
-    <p><a href="https://github.com/yourusername">GitHub</a> | <a href="https://yourusername.github.io">Portfolio</a></p>
+    <p><a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer">GitHub</a></p>
   </section>
 
   <footer>
